--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1133,42 +1133,45 @@ border-color:#fff;
     color: #000;
     top: 20%;
     text-align: left;
-    background: rgba(255, 255, 255, 0.55);
+    background: rgba(255, 255, 255, 0.75);
     width: 45%;
     padding: 15px;
-    left: 3%;}
+    left: 3%;    z-index: 999;}
 
 
 
-.work_wrapper .vc_metro-slider-outer .viewport{height:175px;    margin-top: 15px;}
+.work_wrapper .vc_metro-slider-outer .viewport{    height: 135px;
+    margin-top: 15px;
+    margin-bottom: 15px;}
 /* .work_wrapper .vc_metro-slider-outer .scrollbar{display:none;} */
 /* .work_wrapper .owl_carousel_services .caption .vc_metro-slider img{width:100%;} */
 
 .work_wrapper .vc_metro-slider ul li.odd {
-        width: 150px;
+       width: 95px;
     height: 90px;
 }
 .work_wrapper .vc_metro-slider ul li.type-1 {
-        width: 145px;
-    height: 90px;
+        width: 95px;
+    height: 60px;
 	}
+.work_wrapper .vc_metro-slider ul li.type-1.anim-slide-left	{    margin: 9px 0px 0px 0px;}
 .work_wrapper .vc_metro-slider ul li.even {
-    width: 295px;
-    margin-right: 0;;
+       width: 135px;
+    margin-right: 0;
 }
 .work_wrapper .vc_metro-slider ul li.type-2 {
-        width: 150px;
-    height: 95px;
+        width: 110px;
+    height: 55px;
 }
 .work_wrapper .vc_metro-slider ul li.type-3 {
-        width: 50px;
-    height: 60px;
+        width: 30px;
+    height: 30px;
 }
-.work_wrapper .vc_metro-slider ul li .ml_100{    margin-left: -75px;
+.work_wrapper .vc_metro-slider ul li .ml_100{    margin-left: -15px;
     margin-top: 10px;}
 .work_wrapper .vc_metro-slider-outer .scrollbar{margin:0px auto;}
 .work_wrapper .vc_metro-slider-outer{overflow:hidden;}
-.work_wrapper .vc_metro-slider-outer .scrollbar{height:5px;width: 100%!important;}
+.work_wrapper .vc_metro-slider-outer .scrollbar{height:5px;width: 100%!important;display: none;}
 .work_wrapper .vc_metro-slider-outer .track{width: 100%!important;}
 .work_wrapper .vc_bg-color{background-color:#222;}
 /* .work_wrapper .vc_metro-slider ul li .mouse-over{height:auto;} */
@@ -1181,21 +1184,21 @@ border-color:#fff;
 }
 .work_wrapper .vc_metro-slider-outer .overview{height:100%;width:100%;}
 .work_wrapper .vc_metro-slider ul li .mouse-over .content .text {padding: 10px;}
-.work_wrapper .vc_metro-slider ul li .anim-slide-top{    height: 150px;}
+.work_wrapper .vc_metro-slider ul li .anim-slide-top{    height: 90px;}
 .work_wrapper .vc_main-color {color: #0061af;display:block;}
 .work_wrapper .vc_metro-slider ul li .mouse-over {background: rgba(0, 0, 0, 0.75);height: auto;}
 .work_wrapper .vc_metro-slider ul li .mouse-over h2{text-align: center;}
 .work_wrapper .vc_metro-slider ul li .mouse-over h2 span{display: block;font-weight: 100;}	
 .work_wrapper .vc_metro-slider-outer .thumb{width:85%!important;}	
 
-.work_wrapper .vc_metro-slider ul li.ms_1{margin: 22px 0px 0px 8px;}
-.work_wrapper .vc_metro-slider ul li.ms_2{margin-top: 55px;margin-left: -20px;}
-.work_wrapper .vc_metro-slider ul li.ms_3{margin: 30px 0px 0px -28px;}
-.work_wrapper .vc_metro-slider ul li.ms_4{margin: -4px 0px 0px -7px;}
-.work_wrapper .vc_metro-slider ul li.ms_5{margin: -23px 0px 0px 97px;}
+.work_wrapper .vc_metro-slider ul li.ms_1{margin: 0px 0px 0px 0px;}
+.work_wrapper .vc_metro-slider ul li.ms_2{margin-top: 45px;margin-left: -8px;}
+.work_wrapper .vc_metro-slider ul li.ms_3{margin: 30px 0px 0px -13px;}
+.work_wrapper .vc_metro-slider ul li.ms_4{margin: 4px 0px 0px 2px;}
+.work_wrapper .vc_metro-slider ul li.ms_5{margin: 0px 0px 0px 78px;}
 .work_wrapper .vc_metro-slider ul li.ms_6{margin: -90px 0px 0px 248px;}
-.work_wrapper .vc_metro-slider ul li.ms_7{margin: 39px 0px 0px 4px;}
-	
+.work_wrapper .vc_metro-slider ul li.ms_7{margin: 93px 0px 0px 40px;}
+.work_wrapper .vc_metro-slider ul li.anim-rotate.ms_7{width:78px;}
 	
 
 
@@ -1230,7 +1233,7 @@ border-color:#fff;
     font-size: 20px;
     display: block;
     line-height: 30px;}
-.slider .owl_carousel_services .owl-item .caption .technology_used{    padding: 25px 0px 0px;
+.slider .owl_carousel_services .owl-item .caption .technology_used{    padding: 5px 0px 0px;
     float: left;
     width: 100%;}
 .slider .owl_carousel_services .owl-item .caption .project_desc ul li i{color: #0061AF;
@@ -1241,7 +1244,7 @@ border-color:#fff;
     text-transform: capitalize;
     font-size: 14px;}
 .slider .owl_carousel_services .owl-item .caption .project_desc ul {text-align:center;margin-bottom:0px;}
-.slider .owl_carousel_services .owl-item .caption .technology_used ul{margin-bottom:0px;}
+.slider .owl_carousel_services .owl-item .caption .technology_used ul{margin-bottom:0px;line-height: 0px;}
 .slider	.view_all_services{position: fixed;bottom: 0%;left: 50%;z-index: 10;}
 .slider	.view_all_services .banner_btn{padding:6px 10px;opacity: 0.85;margin-bottom: 35px;}
 .boxed .row-project-box .view_more_box .view_all_works .banner_btn,.boxed .row-partners .view_more_clients .view_all_clients .banner_btn{opacity: 0.85;background: #a6ce39;color: #ffffff;border-radius: 50%;width: 35px;height: 35px;text-align: center;padding: 0px;line-height: 33px;}
@@ -1270,6 +1273,53 @@ border-color:#fff;
 .work_wrapper .boxed .intro .project-box img{width: 125px;height: auto;margin: 0 auto;}
 .work_wrapper .boxed .intro .col-project-box{margin-bottom:10px;}
 /*====== end work section css =====*/
+
+
+
+/*====== start portfoliodetail process css ======*/
+.work_wrapper .hr_portfolio_process{width:100%;float:left;padding: 10px 0px 20px;}
+.work_wrapper .hr_portfolio_process .hr_pp_block{width:21.8%;float:left;/* overflow: hidden; */position: relative;}
+.work_wrapper .hr_portfolio_process .hr_pp_block .mouse-over {background: rgba(0, 0, 0, 0.75);height: 100%;margin-left: 100%;    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 0;opacity: 0;
+    color: #FFF;    transition: .3s ease 0s;cursor:pointer;}
+.work_wrapper .hr_portfolio_process .hr_pp_block .mouse-over .content .text {
+    padding: 10px;
+}
+.work_wrapper .hr_portfolio_process .hr_pp_block .mouse-over h2 {
+    text-align: center;color: #FFF;
+    font-weight: 600;
+    font-size: 14px;
+    margin: 0px;
+    text-transform: uppercase;
+    line-height: 22px;
+}
+.work_wrapper .hr_portfolio_process .hr_pp_block:hover .mouse-over {
+    margin-left: 0;
+}
+.work_wrapper .hr_portfolio_process .hr_pp_block:hover .mouse-over{opacity:1;}
+.work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_two{margin: 40px 0px 0px 0px;}
+.work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_three{margin: -5px 0px;}
+.work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_four{margin: 55px -37px;}
+.work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_four{margin: 60px 0px 0px -39px;}
+.work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_five{margin: 30px 0px 0px -15px;}
+.owl-item{
+  position: relative;
+}
+.overlay{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background-color: #222;
+  opacity: 0.5;
+  z-index:1;
+}
+/*====== end portfoliodetail process css ======*/
+
 
 /*====== start ourteam section css =====*/
 .our_team .intro .our_team_wrap .team_header h2{text-align:center;margin: 0px 0px 30px 0px;color: #a6ce38;font-weight: 400;font-size: 30px;letter-spacing: 1px;}
@@ -1733,13 +1783,29 @@ video {background-size: cover;display: table-cell;vertical-align: middle;width: 
 .go_top:hover{background: rgba(255,255,255,0.8); transition: all .3s ease-in-out;}
 
 
- @media (min-width:2200px){
-	 .ourwork_section.pp-scrollable .vertical-centred { padding-top:35rem;}
- }
   @media (min-width:1900px){
 	  .ourwork_section.pp-scrollable .vertical-centred {
     padding-top: 11.3rem;
-  }}
+  }
+  .work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_four {
+    margin: 88px 0px 0px -57px;
+}
+.work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_five {
+    margin: 35px 0px 0px -40px;
+}
+.work_wrapper .owl_carousel_services .owl-item .caption{top:30%;}
+}
+
+ @media (min-width:2200px){
+	 .ourwork_section.pp-scrollable .vertical-centred { padding-top:35rem;}
+	 .work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_four {
+    margin: 120px 0px 0px -76px;
+}
+.work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_five {
+    margin: 60px 0px 0px -30px;
+}
+ }
+
  @media (max-width:1450px){
 	 .resume-content ul li{height:25px;width:25px;}
 	 .project-box{height:180px!important;}
@@ -1789,6 +1855,31 @@ video {background-size: cover;display: table-cell;vertical-align: middle;width: 
 }
 
  @media (max-width:1024px){/* .resume-study{height:auto!important;} */
+ 
+  .slider .view_all_services {top: 18%;
+    left: 5%;
+    z-index: 10;
+    position: absolute;
+    bottom: auto;} 
+ 
+ /* .slider .view_all_services {
+    position: fixed!important;
+    top: 25%!important;
+    left: 10%!important;
+    right: auto!important;
+}
+.owl-carousel .owl-nav {
+    bottom: 14%;
+    position: fixed;
+} */
+
+.work_wrapper .hr_portfolio_process {
+    width: 1000px;
+    overflow-x: scroll;
+}
+.work_wrapper .hr_portfolio_process .hr_pp_block {
+    width: 20%;
+}
  
 	.holderCircle {
     width: 100%;
@@ -1894,12 +1985,12 @@ width: 90%!important;} */
     padding: 10px 10px 0px 10px;
 	margin: 15px 0px;
     }
-	.slider	.view_all_services {
+	/* .slider	.view_all_services {
        position: absolute;
     bottom: 10%;
     right: 15px;
     left: auto;
-}
+} */
 .owl-carousel .owl-nav {
 bottom: 14%;}
 
@@ -1948,6 +2039,7 @@ bottom: 14%;}
 	.design-process-content h3{display:none;}
   }
  @media (max-width:767px){
+	 .owl-carousel .owl-nav{top:10%!important;}
 	 .menu-is-opened .menu{overflow-x: hidden;overflow-y: auto;}
 	 .about_us .boxed .intro .hideinxs{display:none;}
 	  .about_us .boxed .intro .visibleinxs{display:block;}
@@ -2007,11 +2099,11 @@ margin-top: 20%!important;}
 /*  .owl_carousel_services.owl-carousel .owl-nav{     position: absolute;
     top: 9%!important;
     right: 9%;} */
- .slider .view_all_services {top: 10px;
+/*  .slider .view_all_services {top: 10px;
     left: 5%;
     z-index: 10;
     position: absolute;
-    bottom: auto;} 
+    bottom: auto;}  */
 	.owl-carousel .owl-item .owl-item{height:100%;margin-bottom: 0px;}
 	.about_us .intro .section_aboutus img, .about_us .intro .our_vision_mission img{width: 40%;
 margin: 15px auto;}
@@ -2097,6 +2189,13 @@ height: 95px;}
  @media (max-width:480px){
 .work_wrapper .row-project-box .afp,.work_wrapper .row-project-box .aere,.work_wrapper .row-project-box .ted,.work_wrapper .row-project-box .alli,.work_wrapper .row-project-box .lfb,.work_wrapper .row-project-box .atd{width:100%!important;}
  .technology_link {float:left; clear:both; display:block; width:100%; margin:10px 0 0 0;} 
+ .slider .owl_carousel_services .owl-item .caption .project_desc ul li {
+    display: inline-block;
+    margin: 10px 10px;
+    text-align: center;
+    width: 30%;
+}
+.slider .owl_carousel_services .owl-item .caption .project_desc ul li h6{font-size:12px;}
  }
  
  @media (max-width:360px){.our_services .intro .col-resume .resume-title{font-size:11px;}
