--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1783,28 +1783,20 @@ video {background-size: cover;display: table-cell;vertical-align: middle;width: 
 .go_top:hover{background: rgba(255,255,255,0.8); transition: all .3s ease-in-out;}
 
 
+
+ @media (min-width:2200px){
+	 .ourwork_section.pp-scrollable .vertical-centred { padding-top:35rem;}
+	 .work_wrapper .hr_portfolio_process .hr_pp_block{width:20% !important;}
+ }
+
+
   @media (min-width:1900px){
 	  .ourwork_section.pp-scrollable .vertical-centred {
     padding-top: 11.3rem;
   }
-  .work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_four {
-    margin: 88px 0px 0px -57px;
-}
-.work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_five {
-    margin: 35px 0px 0px -40px;
-}
+.work_wrapper .hr_portfolio_process .hr_pp_block{width:20% !important;}
 .work_wrapper .owl_carousel_services .owl-item .caption{top:30%;}
 }
-
- @media (min-width:2200px){
-	 .ourwork_section.pp-scrollable .vertical-centred { padding-top:35rem;}
-	 .work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_four {
-    margin: 120px 0px 0px -76px;
-}
-.work_wrapper .hr_portfolio_process .hr_pp_block.hr_pp_five {
-    margin: 60px 0px 0px -30px;
-}
- }
 
  @media (max-width:1450px){
 	 .resume-content ul li{height:25px;width:25px;}
